Update contact page

--- a/Project 01 - Barbershop site/pages/home/index.html
+++ b/Project 01 - Barbershop site/pages/home/index.html
@@ -10,9 +10,9 @@
     <div id="background">
         <header>
             <div class="smaller">
-                <a href="">Logo</a>
+                <a href="./index.html">Logo</a>
                 <nav>
-                    <a href="">Contact</a>
+                    <a href="../contact/index.html">Contact</a>
                     <a href="">Hair Cuts</a>
                     <a href="">About</a>
                 </nav>
