--- a/Project 02 - Contact Page/Page v1/index.html
+++ b/Project 02 - Contact Page/Page v1/index.html
@@ -17,7 +17,7 @@
                 <section class="leftSide">
                     <section class="image">
                         <div class="circle">
-                            <img src="assets/photo_2020-05-13_18-56-20.jpg" alt="">
+                            <img src="../assets/photo_2020-05-13_18-56-20.jpg" alt="">
                         </div>
                         <div class="text">
                             <h1>Breno</h1>
@@ -37,33 +37,33 @@
                                 <li>
                                     HTML:
                                     <img 
-                                        class="skillHtml"  src="assets/1828884.svg" >
+                                        class="skillHtml"  src="../assets/1828884.svg" >
                                     <img 
-                                        class="skillHtml" src="assets/1828884.svg" >
+                                        class="skillHtml" src="../assets/1828884.svg" >
                                     <img 
-                                        class="skillHtml" src="assets/1828884.svg" >
+                                        class="skillHtml" src="../assets/1828884.svg" >
                                     <img 
-                                        class="skillHtml" src="assets/1828884.svg" >
+                                        class="skillHtml" src="../assets/1828884.svg" >
                                 </li>
                                 <li>
                                     CSS:
                                     <img 
-                                        class="skillCss"  src="assets/1828884.svg" >
+                                        class="skillCss"  src="../assets/1828884.svg" >
                                     <img 
-                                        class="skillCss" src="assets/1828884.svg" >
+                                        class="skillCss" src="../assets/1828884.svg" >
                                     <img 
-                                        class="skillCss" src="assets/1828884.svg" >
+                                        class="skillCss" src="../assets/1828884.svg" >
     
                                 </li>
                                 <li>
                                     JavaScript:
                                     <img 
                                         class="skillJs"
-                                        src="assets/1828884.svg" >
+                                        src="../assets/1828884.svg" >
                                     <img 
-                                        class="skillJs" src="assets/1828884.svg" >
+                                        class="skillJs" src="../assets/1828884.svg" >
                                     <img 
-                                        class="skillJs" src="assets/1828884.svg" >
+                                        class="skillJs" src="../assets/1828884.svg" >
     
                                 </li>
                             </ul>
@@ -73,11 +73,11 @@
                         <div class="content">
                             <h1>Contact</h1>
                             <button class="btnGit" onclick="openNewWindow('github')">
-                                <img src="assets/iconmonstr-github-1.svg" >
+                                <img src="../assets/iconmonstr-github-1.svg" >
                                 /breno5g
                             </button>
                             <button class="btnInsta" onclick="openNewWindow('insta')">
-                                <img src="assets/instagram.svg">
+                                <img src="../assets/instagram.svg">
                                 /breno.index
                             </button>
                         </div>
