--- a/Project 03 - Green Forest Hotel/index.html
+++ b/Project 03 - Green Forest Hotel/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Forest</title>
+    <title>Green Forest</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
