--- a/Project 03 - Green Forest Hotel/index.html
+++ b/Project 03 - Green Forest Hotel/index.html
@@ -28,7 +28,9 @@
             <div class="cards">
                 <div class="card first">
                     <h1>Travel tipps</h1>  
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, molestias maiores! Sit quaerat voluptas iure nostrum ipsum dolore consequuntur dolorem, minus nulla.</p>  
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, molestias maiores! Sit quaerat voluptas iure nostrum ipsum dolore consequuntur dolorem, minus nulla.
+                    </p>  
                 </div>
                 <div class="card second">
                     <h1>Search locations</h1>
