--- a/Project 05 - File Sharing Web App/index.html
+++ b/Project 05 - File Sharing Web App/index.html
@@ -17,7 +17,12 @@
             <img src="assets/icons/Left side Bar/icons8-jog-reverse-50.png" alt="">
         </section>
         <section class="content">
-            
+            <div class="search">
+                <input type="text" placeholder="Search for files">
+            </div>
+            <div class="quickAccess">
+                <h1>Quick Access</h1>
+            </div>
         </section>
         <section class="rightSideBar">
 
