Create quick access row

--- a/Project 05 - File Sharing Web App/index.html
+++ b/Project 05 - File Sharing Web App/index.html
@@ -22,10 +22,48 @@
             </div>
             <div class="quickAccess">
                 <h1>Quick Access</h1>
+                <div class="cards"> 
+                    <div class="cardContainer ">
+                        <div class="card color1">
+                            <img src="assets/icons/Content/icons8-image-100.png">
+                        </div>
+                        <h6>Images</h6>
+                    </div>
+                    <div class="cardContainer ">
+                        <div class="card color1">
+                            <img src="assets/icons/Content/icons8-musical-notes-100.png">
+                        </div>
+                        <h6>Music</h6>
+                    </div>
+                    <div class="cardContainer">
+                        <div class="card color2">
+                            <img src="assets/icons/Content/icons8-play-100.png">
+                        </div>
+                        <h6>Video</h6>
+                    </div>
+                    <div class="cardContainer">
+                        <div class="card color2">
+                            <img src="assets/icons/Content/icons8-documents-100.png">
+                        </div>
+                        <h6>Docs</h6>
+                    </div>
+                    <div class="cardContainer">
+                        <div class="card color3">
+                            <img src="assets/icons/Content/icons8-apps-tab-100.png">
+                        </div>
+                        <h6>Apps</h6>
+                    </div>
+                    <div class="cardContainer">
+                        <div class="card color3">
+                            <img src="assets/icons/Content/icons8-below-100.png">
+                        </div>
+                        <h6>Downloads</h6>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="rightSideBar">
-
+            
         </section>
     </div>
 </body>
