Create base preview

--- a/Project 05 - File Sharing Web App/index.html
+++ b/Project 05 - File Sharing Web App/index.html
@@ -61,9 +61,26 @@
                     </div>
                 </div>
             </div>
+            <div class="preview">
+                <header>
+                    <h1>Preview</h1>
+                    <p>View in folders</p>
+                </header>
+                <div class="cards">
+                    <div class="biggerCard">
+                        <img src="assets/Music preview/thumb-1920-198582.jpg">
+                    </div>
+                    <div class="smallerCard">
+                        <img src="assets/Music preview/edu-falaschi.jpg">
+                    </div>
+                    <div class="smallerCard">
+                        <img src="assets/Music preview/Gloryhammer.jpg">
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="rightSideBar">
-            
+
         </section>
     </div>
 </body>
