--- a/Project 05 - File Sharing Web App/index.html
+++ b/Project 05 - File Sharing Web App/index.html
@@ -67,14 +67,35 @@
                     <p>View in folders</p>
                 </header>
                 <div class="cards">
-                    <div class="biggerCard">
-                        <img src="assets/Music preview/thumb-1920-198582.jpg">
+                    <div class="card">
+                        <img src="assets/Music preview/pexels-casia-charlie-2451040.jpg">
+                        <div class="btnContainer">
+                            <div>
+                                <h1>Gloryhammer</h1>
+                                <p>50mb</p>
+                            </div>
+                            <div class="playButton">
+                                <img class="playButton" src="assets/icons/Content/icons8-play-50.png">
+                            </div>
+                        </div>
                     </div>
-                    <div class="smallerCard">
-                        <img src="assets/Music preview/edu-falaschi.jpg">
+                    <div class="card">
+                        <img src="assets/Music preview/pexels-pixabay-460621.jpg">
+                        <div class="btnContainer">
+                            <div class="musicText">
+                                <h1>Gloryhammer</h1>
+                                <p>50mb</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="smallerCard">
-                        <img src="assets/Music preview/Gloryhammer.jpg">
+                    <div class="card">
+                        <img src="assets/Music preview/pexels-roberto-nickson-2478248.jpg">
+                        <div class="btnContainer">
+                            <div class="musicText">
+                                <h1>Gloryhammer</h1>
+                                <p>50mb</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
