Criando os downloads

--- a/Project 05 - File Sharing Web App/index.html
+++ b/Project 05 - File Sharing Web App/index.html
@@ -135,7 +135,38 @@
             </div>
         </section>
         <section class="rightSideBar">
-
+            <div class="downloads">
+                <header>
+                    <h1>Downloads</h1>
+                    <p>...</p>
+                </header>
+                <div class="downloadContainer">
+                    <h1>Today</h1>
+                    <div class="download">
+                        <div class="img">
+                            <img src="assets/icons/Right side bar/icons8-file-64.png">
+                        </div>
+                        <div class="text">
+                            <h1>Mamaco Wins.mp4</h1>
+                            <p>34.45 MB Waiting for download</p>
+                        </div>
+                        <img src="assets/icons/Right side bar/icons8-below-100.png">
+                    </div>
+                </div>
+                <div class="downloadContainer">
+                    <h1>Yesterday</h1>
+                    <div class="download">
+                        <div class="img">
+                            <img src="assets/icons/Right side bar/icons8-file-64.png">
+                        </div>
+                        <div class="text">
+                            <h1>Mamaco Wins.mp4</h1>
+                            <div class="downloadBar"></div>
+                        </div>
+                        <img src="assets/icons/Right side bar/icons8-pause-button-100.png">
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </body>
