Create file received

--- a/Project 05 - File Sharing Web App/index.html
+++ b/Project 05 - File Sharing Web App/index.html
@@ -165,6 +165,15 @@
                         </div>
                         <img src="assets/icons/Right side bar/icons8-pause-button-100.png">
                     </div>
+                    <div class="fileReceived">
+                        <h1>File Received</h1>
+                        <div class="files">
+                            <img src="assets/Received files/pexels-photo-371924.jpeg">
+                            <img src="assets/Received files/pexels-photo-57690.jpeg">
+                            <img src="assets/Received files/pexels-photo-577585.jpeg">
+                        </div>
+                        <p>Received 3 images total 50.3 MB</p>
+                    </div>
                 </div>
             </div>
         </section>
