--- a/Project 06 - Kanban Board/index.html
+++ b/Project 06 - Kanban Board/index.html
@@ -7,71 +7,81 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="menu">
+        <img src="assets/icons/icons8-internet-48.png">
+        <input type="text" placeholder="Search for anything...">
+        <ul>
+            <li>Projects</li>
+            <li>Team</li>
+            <li>Activity</li>
+        </ul>
+        <img src="https://avatars.githubusercontent.com/u/51424478?s=460&u=23140fce81240c97dd290b96dbb7171fba8e564c&v=4">
+    </nav>
     <div class="container">
-        <div class="list">
-            <div class="card">
-                <h6 class="tag">
-                    Design
-                </h6>
-                <h1 class="taskName">
-                    This is the title of the card for the thing that needs to be done.
-                </h1>
-                <div class="infos">
-                    icons here
+        <div class="lists">
+            <div class="list">
+                <div class="listTitle">
+                    <h1>Test</h1>
+                    <h2 class="numberOfCards">5</h2>
+                    <h3 class="addCard">+</h3>
+                </div>
+                <div class="card">
+                    <h6 class="tag">
+                        Design
+                    </h6>
+                    <h1 class="taskName">
+                        This is the title of the card for the thing that needs to be done.
+                    </h1>
+                    <div class="infos">
+                        icons here
+                    </div>
+                </div>
+                <div class="card">
+                    <h6 class="tag">
+                        Development
+                    </h6>
+                    <h1 class="taskName">
+                        This is the title of the card for the thing that needs to be done.
+                    </h1>
+                    <div class="infos">
+                        Research
+                    </div>
+                </div>
+                <div class="card">
+                    <h6 class="tag">
+                        Design
+                    </h6>
+                    <h1 class="taskName">
+                        This is the title of the card for the thing that needs to be done.
+                    </h1>
+                    <div class="infos">
+                        icons here
+                    </div>
+                </div>
+                <div class="card">
+                    <h6 class="tag">
+                        Design
+                    </h6>
+                    <h1 class="taskName">
+                        This is the title of the card for the thing that needs to be done.
+                    </h1>
+                    <div class="infos">
+                        icons here
+                    </div>
+                </div>
+                <div class="card">
+                    <h6 class="tag">
+                        Design
+                    </h6>
+                    <h1 class="taskName">
+                        This is the title of the card for the thing that needs to be done.
+                    </h1>
+                    <div class="infos">
+                        icons here
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="list">
-            <div class="card">
-                <h6 class="tag">
-                    Design
-                </h6>
-                <h1 class="taskName">
-                    This is the title of the card for the thing that needs to be done.
-                </h1>
-                <div class="infos">
-                    icons here
-                </div>
-            </div>
-        </div>
-        <div class="list">
-            <div class="card">
-                <h6 class="tag">
-                    Design
-                </h6>
-                <h1 class="taskName">
-                    This is the title of the card for the thing that needs to be done.
-                </h1>
-                <div class="infos">
-                    icons here
-                </div>
-            </div>
-        </div>
-        <div class="list">
-            <div class="card">
-                <h6 class="tag">
-                    Design
-                </h6>
-                <h1 class="taskName">
-                    This is the title of the card for the thing that needs to be done.
-                </h1>
-                <div class="infos">
-                    icons here
-                </div>
-            </div>
-        </div>
-        <div class="list">
-            <div class="card">
-                <h6 class="tag">
-                    Design
-                </h6>
-                <h1 class="taskName">
-                    This is the title of the card for the thing that needs to be done.
-                </h1>
-                <div class="infos">
-                    icons here
-                </div>
-            </div>
+            
         </div>
     </div>
 </body>
