--- a/Project 07 - Clone Instagram/index.html
+++ b/Project 07 - Clone Instagram/index.html
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fakegram</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="container">
+            <img src="assets/images/1024px-Instagram_logo.svg.png" alt="Instagram">
+            <input type="text" placeholder="Search">
+            <ul>
+                <li><i class="fas fa-home"></i></li>
+                <li><i class="far fa-paper-plane"></i></li>
+                <li><i class="far fa-compass"></i></li>
+                <li><i class="far fa-heart"></i></li>
+                <li><img src="https://avatars.githubusercontent.com/u/51424478?s=460&u=23140fce81240c97dd290b96dbb7171fba8e564c&v=4" alt="Breno Santos"></li>
+            </ul>
+        </div>
+    </nav>
+    <section>
+        <div class="left">
+            <div class="storys">
+
+            </div>
+            <div class="posts">
+
+            </div>
+        </div>
+        <div class="right">
+            
+        </div>
+    </section>
 </body>
 </html>
