"finish" the stories bar

--- a/Project 07 - Clone Instagram/index.html
+++ b/Project 07 - Clone Instagram/index.html
@@ -24,14 +24,49 @@
     <section>
         <div class="left">
             <div class="storys">
-
+                <div class="storiesContainer">
+                    <div class="story">
+                        <img src="assets/images/gojo sensei.jpg" alt="Gojo sensei">
+                        <h1>Satoru Gojo</h1>
+                    </div>
+                    <div class="story">
+                        <img src="assets/images/god usopp.jpg" alt="Gojo sensei">
+                        <h1>God Usopp</h1>
+                    </div>
+                    <div class="story">
+                        <img src="assets/images/garp.png" alt="Gojo sensei">
+                        <h1>Monkey D.G...</h1>
+                    </div>
+                    <div class="story">
+                        <img src="assets/images/levi.jpg" alt="Gojo sensei">
+                        <h1>Levi</h1>
+                    </div>
+                    <div class="story">
+                        <img src="assets/images/Mamaco.jpg" alt="Gojo sensei">
+                        <h1>Mamaco</h1>
+                    </div>
+                    <div class="story">
+                        <img src="assets/images/netero.jpg" alt="Gojo sensei">
+                        <h1>Netero</h1>
+                    </div>
+                    <div class="story">
+                        <img src="assets/images/sukuna.jpg" alt="Gojo sensei">
+                        <h1>Sukuna</h1>
+                    </div>
+                    <div class="story">
+                        <img src="assets/images/tanjiro.jpg" alt="Gojo sensei">
+                        <h1>Kamado Tanjiro</h1>
+                    </div>
+                </div>
+                <span><i class="fas fa-chevron-circle-left"></i></span>
+                <span><i class="fas fa-chevron-circle-right"></i></span>
             </div>
             <div class="posts">
-
+                
             </div>
         </div>
         <div class="right">
-            
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odio rerum alias voluptate, ut placeat voluptatem tempore assumenda nihil dolores dolor tenetur iure inventore laboriosam voluptates minus sequi fuga esse?
         </div>
     </section>
 </body>
