--- a/Project 07 - Clone Instagram/index.html
+++ b/Project 07 - Clone Instagram/index.html
@@ -68,6 +68,17 @@
                         <h1>satorugojo</h1>
                         <span>...</span>
                     </header>
+                    <div class="body">
+                        <img src="assets/images/satoru gojo post.jpg">
+                    </div>
+                    <div class="buttons">
+                        <ul>
+                            <li><i class="far fa-heart"></i></li>
+                            <li><i class="far fa-comment"></i></li>
+                            <li><i class="far fa-paper-plane"></i></li>
+                            <li><i class="far fa-bookmark"></i></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
