Right side header

--- a/Project 07 - Clone Instagram/index.html
+++ b/Project 07 - Clone Instagram/index.html
@@ -125,7 +125,13 @@
             </div>
         </div>
         <div class="right">
-            
+            <header>
+                <img src="https://avatars.githubusercontent.com/u/51424478?s=460&u=23140fce81240c97dd290b96dbb7171fba8e564c&v=4" alt="Breno Santos">
+                <div class="text">
+                    <h1>breno.index</h1>
+                    <span>Breno Santos</span>
+                </div>
+            </header>
         </div>
     </section>
 </body>
