--- a/Project 07 - Clone Instagram/index.html
+++ b/Project 07 - Clone Instagram/index.html
@@ -132,6 +132,12 @@
                     <span>Breno Santos</span>
                 </div>
             </header>
+            <div class="suggestions">
+                <div class="text">
+                    <h1>Suggestions For You</h1>
+                    <span>See All</span>
+                </div>
+            </div>
         </div>
     </section>
 </body>
