"finish" the project

--- a/Project 07 - Clone Instagram/index.html
+++ b/Project 07 - Clone Instagram/index.html
@@ -133,9 +133,51 @@
                 </div>
             </header>
             <div class="suggestions">
-                <div class="text">
+                <header>
                     <h1>Suggestions For You</h1>
                     <span>See All</span>
+                </header>
+                <div class="cards">
+                    <div class="card">
+                        <img src="assets/images/Sonic.jpg">
+                        <div class="text">
+                            <h1>sonic_hedgehog</h1>
+                            <span>new to earth</span>
+                        </div>
+                        <span>Follow</span>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/hisoka.jpg">
+                        <div class="text">
+                            <h1>hisoka</h1>
+                            <span>new to greed island</span>
+                        </div>
+                        <span>Follow</span>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/PicaPau.jpg">
+                        <div class="text">
+                            <h1>Pica-pau</h1>
+                            <span>old bagarai</span>
+                        </div>
+                        <span>Follow</span>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/Doofenshmirtz.jpg">
+                        <div class="text">
+                            <h1>Doofenshmirtz</h1>
+                            <span>new to evil corp</span>
+                        </div>
+                        <span>Follow</span>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/sailor-moon.jpg">
+                        <div class="text">
+                            <h1>sailor_moon</h1>
+                            <span>new to tokyo</span>
+                        </div>
+                        <span>Follow</span>
+                    </div>
                 </div>
             </div>
         </div>
