finish the header

--- a/Project 08 - Youtube clone/index.html
+++ b/Project 08 - Youtube clone/index.html
@@ -11,13 +11,15 @@
     <header>
         <div class="left">
             <button><i class="fas fa-bars"></i></button>
-            <a href="#"><i class="fab fa-youtube"></i>YOUTUBE<span>BR</span></a>
+            <a href="#"><i class="fab fa-youtube"></i>YouTube<span>BR</span></a>
         </div>
-        <form action="#" class="searchBar">
-            <input type="text" placeholder="Pesquisar">
-            <button><i class="fas fa-search"></i></button>
-            <button><i class="fas fa-microphone"></i></button>
-        </form>
+        <div class="center">
+            <form action="#" class="searchBar">
+                <input type="text" placeholder="Pesquisar">
+                <button class="searchButton"><i class="fas fa-search"></i></button>
+                <button class="micButton"><i class="fas fa-microphone"></i></button>
+            </form>
+        </div>
         <div class="right">
             <a href="#"><i class="fas fa-video"></i></a>
             <a href="#"><i class="fas fa-th"></i></a>
