Finish the header again

--- a/Project 08 - Youtube clone/index.html
+++ b/Project 08 - Youtube clone/index.html
@@ -27,5 +27,8 @@
             <img src="https://avatars.githubusercontent.com/u/51424478?s=460&u=23140fce81240c97dd290b96dbb7171fba8e564c&v=4" alt="Breno Santos">
         </div>
     </header>
+    <section class="container">
+        
+    </section>
 </body>
 </html>
