Base para o menu lateral

--- a/Project 08 - Youtube clone/index.html
+++ b/Project 08 - Youtube clone/index.html
@@ -28,7 +28,27 @@
         </div>
     </header>
     <section class="container">
-        
+        <nav class="menu">
+            <div class="top">
+                <a href="#"><i class="fas fa-home"></i> Início</a>
+                <a href="#"><i class="fas fa-fire"></i> Em alta</a>
+                <a href="#"><i class="fas fa-archive"> Inscrições</i></a>
+            </div>
+            <div class="playlists">
+                <a href="#"><i class="fas fa-book"></i> Biblioteca</a>
+                <a href="#"><i class="fas fa-history"></i> Histórico</a>
+                <a href="#"><i class="fas fa-play"> Seus vídeos</i></a>
+                <a href="#"><i class="fas fa-clock"></i> </a>
+                <a href="#"><i class="fas fa-thumbs-up"> Vídeos marcados com gostei</i></a>
+                <a href="#"><i class="fas fa-chevron-down"> Mostrar mais</i></a>
+            </div>
+            <div class="subscriptions">
+
+            </div>
+        </nav>
+        <div class="videos">
+            
+        </div>
     </section>
 </body>
 </html>
