--- a/Project 08 - Youtube clone/index.html
+++ b/Project 08 - Youtube clone/index.html
@@ -30,17 +30,17 @@
     <section class="container">
         <nav class="menu">
             <div class="top">
-                <a href="#"><i class="fas fa-home"></i> Início</a>
-                <a href="#"><i class="fas fa-fire"></i> Em alta</a>
-                <a href="#"><i class="fas fa-archive"> Inscrições</i></a>
+                <a href="#" class="selected"><i class="fas fa-home selected"></i> Início</a>
+                <a href="#">&nbsp;<i class="fas fa-fire"></i>&nbsp; Em alta</a>
+                <a href="#"><i class="fas fa-archive"></i>&nbsp; Inscrições</a>
             </div>
             <div class="playlists">
-                <a href="#"><i class="fas fa-book"></i> Biblioteca</a>
+                <a href="#"><i class="fas fa-book"></i>&nbsp; Biblioteca</a>
                 <a href="#"><i class="fas fa-history"></i> Histórico</a>
-                <a href="#"><i class="fas fa-play"> Seus vídeos</i></a>
-                <a href="#"><i class="fas fa-clock"></i> </a>
-                <a href="#"><i class="fas fa-thumbs-up"> Vídeos marcados com gostei</i></a>
-                <a href="#"><i class="fas fa-chevron-down"> Mostrar mais</i></a>
+                <a href="#"><i class="fas fa-play"></i>&nbsp; Seus vídeos</a>
+                <a href="#"><i class="fas fa-clock"></i> Assistir mais tarde</a>
+                <a href="#"><i class="fas fa-thumbs-up"></i> Vídeos marcados com gostei</a>
+                <a href="#"><i class="fas fa-chevron-down"></i>&nbsp; Mostrar mais</a>
             </div>
             <div class="subscriptions">
 
