Sessão de inscrições

--- a/Project 08 - Youtube clone/index.html
+++ b/Project 08 - Youtube clone/index.html
@@ -43,7 +43,31 @@
                 <a href="#"><i class="fas fa-chevron-down"></i>&nbsp; Mostrar mais</a>
             </div>
             <div class="subscriptions">
-
+                <h1>Inscrições</h1>
+                <div class="channel">
+                    <img src="assets/images/Chico bento.jpg" alt="1">
+                    <span>Chico Bento</span>
+                </div>
+                <div class="channel">
+                    <img src="assets/images/Mamaco.jpg" alt="1">
+                    <span>Mamaco</span>
+                </div>
+                <div class="channel">
+                    <img src="assets/images/PicaPau.jpg" alt="1">
+                    <span>Pica-pau</span>
+                </div>
+                <div class="channel">
+                    <img src="assets/images/levi.jpg" alt="1">
+                    <span>mamaco killer</span>
+                </div>
+                <div class="channel">
+                    <img src="assets/images/hisoka.jpg" alt="1">
+                    <span>Taradão</span>
+                </div>
+                <div class="channel">
+                    <img src="assets/images/netero.jpg" alt="1">
+                    <span>Netero</span>
+                </div>
             </div>
         </nav>
         <div class="videos">
